# virtual-folders

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
Source/: TigerFolders.cpp  TigerFolders.def  TigerFolders.h  TigerFoldersHelpers.cpp  TigerFoldersHelpers.h  TigerFoldersPath.cpp  TigerFoldersScan.cpp  TigerFoldersUI.cpp  TigerFoldersWrite.cpp  vdjDsp8.h  vdjPlugin8.h
cmake/: install_dll.cmake
docs/superpowers/specs/: 2026-06-02-tigerfolders-design.md
